#2776 Template editing changes Fixed string input mask Fixed confirmation window z-index
git-svn-id: http://svn.vig/supra7/trunk@342 f05b830f-2085-0410-a479-8f75d39d0b34

--- a/src/webroot/cms/content-manager/pagetoolbar/pagetoolbar.css
+++ b/src/webroot/cms/content-manager/pagetoolbar/pagetoolbar.css
@@ -27,6 +27,9 @@
 	padding: 0;
 	vertical-align: top;
 }
+.yui3-editor-toolbar-main .yui3-button {
+	height: 50px;
+}
 .yui3-editor-toolbar-main .yui3-button button {
 	text-align: center;
 	height: 50px;
@@ -132,4 +135,6 @@
 	-moz-box-shadow: 0 1px 0 rgba(255,255,255,.4);
 	-webkit-box-shadow: 0 1px 0 rgba(255,255,255,.4);
 	box-shadow: 0 1px 0 rgba(255,255,255,.4);
+	
+	vertical-align: middle;
 }
